# ChangeLog for dev-db/postgresql-ip4r
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Aug 2009; Lance Albertson <ramereth@gentoo.org>
  postgresql-ip4r-1.03.ebuild, +metadata.xml:
  QA Fixes

  26 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  New ebuild
