@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST ip4r-1.03.tar.gz 18294 RMD160 611ef4caf2ab98ce898b04a088626720f22ca220 SHA1 cb2ec9a3f0639f3f1ed6531de54a927efc68e23e SHA256 0f972382d9a0c2aa5b1025cacb5ca1a98bcea3a33821b723f3041ee82b0a80f2
+DIST ip4r-1.04.tar.gz 18666 RMD160 9eb3362629e3124a0da927244af13b505273e6ca SHA1 215267b0ed86f0ddf86662a99d1091518e254da2 SHA256 f3e72310a9ed481d43ae27feecd35e7fb87a092d4cf38678e5b4cb669c440703
 EBUILD postgresql-ip4r-1.03.ebuild 657 RMD160 6503ed8d9b79594119048115615f835518dd4e9a SHA1 9c620d238bbe273e1a3413361acc6e36c3865bf9 SHA256 7e132bbdfc5d14e6fa2843219cdb55c139462b1dee00988c8e099e13223047c1
-MISC ChangeLog 312 RMD160 c83e6fca0cc09107b6995bdf80dc5bd5a8197e86 SHA1 7985126db372a8fa172c9c9fb0234dc35e165379 SHA256 01d6805ad45b7d4650f6882dbddfadee4d5f740e467b364240bf4c8a0303f172
+EBUILD postgresql-ip4r-1.04.ebuild 657 RMD160 6a6af478791afd9439d7989bac3d00f8362df187 SHA1 18b4182e321aa6e1659742c9d8662249f2864a26 SHA256 0359cdf1f9601050ed8ec4664c63787865a82935f6314f56e1618d34a3edfba6
+MISC ChangeLog 450 RMD160 5cf0de8662b5f9888c3b1b8b057bbe97dcac5be8 SHA1 fbc1f5575aa3f400f45823eb85b3b6ca0db61a58 SHA256 95e82cabee3043992a47ccc9e7703041afaf08cd4e6d5b463775fa621ffe295e
 MISC metadata.xml 479 RMD160 f7b4cf7ae0d060dda2268f7a479606656ba74261 SHA1 7d08c05c32d18930fc7a4bc23c2cee2ce9b5d78f SHA256 b4a73a23107ef86a4ba952d4addec06cbbdf646509eadf219a9e4a20d4e5678b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKlDYzQW+hXSf0t0IRApNuAKCraSu19BbvUmVfqIjutCmv9Hc3pACfeuHf
-kfBcw4PdL8stsUBb3MJFAx0=
-=Ki6i
+iD8DBQFLKddtQW+hXSf0t0IRArWPAJ9sjjEVrxStt9rj1Os+u42kKerPbgCfeiQO
+ztHWQomYk1k3nZjr/jFl8aE=
+=NtKy
 -----END PGP SIGNATURE-----
