@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*postgresql-ip4r-1.04 (17 Dec 2009)
+
+  17 Dec 2009; Lance Albertson <ramereth@gentoo.org>
+  +postgresql-ip4r-1.04.ebuild:
+  Version bump
+
   25 Aug 2009; Lance Albertson <ramereth@gentoo.org>
   postgresql-ip4r-1.03.ebuild, +metadata.xml:
   QA Fixes
